src/test/deca/context/valid/created/decl_class/return_void.deca
// Description :
//   pas de return alors que type non void demandé
//
// Resultats :
//		OK

class A{
boolean met(){
}
float met1(){
}
int met2(){
}
}