src/test/deca/context/invalid/created/binary_exp/op_comp/eq_boolean_A.deca
// Description :
//    test eq entre un boolean et un A
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 11: (3.33) Opérandes de type boolean, A, attendu: (int|float, int|float) ou (class|null, class|null) ou (bool, bool)
class A{}
{
boolean a;
A b;
boolean c = a == b;
}
